# mundial-2026-predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-manual.yml
data/outputs/: champion_odds.json  group_probabilities.json  model_audit.json  model_calibration.json  model_metadata.json  predictions_today.json  round_probabilities.json  team_power_ranking.json  tournament_snapshot.json
data/processed/: group_standings_current.csv  match_results_real.csv  matches_current.csv  prediction_audit.csv  results_ingest_log.csv  team_features.csv  team_history.csv  team_match_current.csv  teams.csv  tournament_schedule.csv  upcoming_matches.csv
data/raw/: resultados_nuevos.csv  strength_anchor.csv
docs/: data_dictionary.md  methodology_notes.md
scripts/: 00_ingest_results.py  01_build_datasets.py  02_generate_predictions.py  03_export_outputs.py  03_run_simulation.py  04_audit_results.py  ingest_jornada_27jun_y_r16.py  rebuild_post_groups.py  refresh_and_publish.py  update_all.py
src/: config.py
src/audit/: audit_predictions.py  calibration.py  scoring.py  snapshots.py
src/export/: audit_json.py  simulation_json.py  to_json.py
src/features/: recent_form.py  team_strength.py
src/ingest/: load_new_results.py  load_team_history.py  load_worldcup_current.py  normalize_teams.py
src/model/: dixon_coles.py  match_predictor.py  (+1 more)
tests/: test_audit_metrics.py  test_bracket_rules.py  test_group_rules.py  test_group_simulation.py  test_ingest_results.py  test_poisson.py  test_prediction_schema.py  test_team_normalization.py  test_tournament_schedule.py
(+95 files in other folders)
